k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dynamic-mock-server
  labels:
    name: dynamic-mock-server
    app: dynamic-mock-server
